# tadween-core

./: .gitignore  AGENTS.md  NOTICE  README.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: _tests.yml  ci.yml  publish.yml
benchmark/: README.md  automatic_testing.py  memory_collector.ipynb  memory_collector.py  runtime_monitor.ipynb  runtime_monitor.py  task_queue_ram_monitor.ipynb  task_queue_ram_monitor.py
docs/: TODOs.md
examples/: README.md  broker_simple.py  cache_simple.py  workflow_simple.py
examples/broker/: README.md  ex1.py  ex2.py  ex3.py
examples/cache/: README.md  ex1.py  ex2.py
examples/coord/: README.md  ex1.py  ex2.py  ex3.py
examples/handler/: README.md  ex1.py  ex2.py  handler_simple.py
examples/repo/: README.md  ex1.py  ex2.py  ex3.py  ex4.py  my_artifact.py
examples/stage/: README.md  ex1.py  ex2.py  ex3.py
examples/task_queue/: README.md  ex1.py  ex2.py  ex3.py  ex5.py
examples/workflow/: README.md  ex1.py
experiments/: boilerplate.py  bottleneck.py  cache.py
src/tadween_core/: __init__.py  _logging.py  exceptions.py  throttle.py  utils.py
src/tadween_core/broker/: README.md  __init__.py  base.py  listeners.py  memory.py
src/tadween_core/cache/: README.md  __init__.py  adapter.py  base.py  cache.py  policy.py  proxy.py  simple_cache.py
src/tadween_core/coord/: README.md  __init__.py  context.py  resource.py
src/tadween_core/devtools/: __init__.py  utils.py
src/tadween_core/devtools/analytics/: __init__.py  loaders.py  plot.py  processors.py  schemas.py
src/tadween_core/devtools/analytics/collectors/: memory.py  ram.py  runtime.py
src/tadween_core/handler/: README.md  __init__.py  base.py  defaults.py  dummy.py
src/tadween_core/handler/defaults/: downloader.py  s3_downloader.py
src/tadween_core/logger/: README.md  __init__.py  formatters.py  process_queue.py  queue.py  simple.py
src/tadween_core/repo/: README.md  __init__.py  base.py  fs.py  json.py  s3.py  sqlite.py
src/tadween_core/stage/: README.md  __init__.py  decorators.py  policy.py  stage.py
src/tadween_core/task_queue/: README.md  __init__.py  base.py  base_policy.py  base_queue.py  dynamic.py  policy.py  process_queue.py  thread_queue.py
src/tadween_core/types/: __init__.py  s3_config.py
src/tadween_core/types/artifact/: README.md  __init__.py  base.py  part.py  tadween.py
src/tadween_core/workflow/: README.md  __init__.py  router.py  visualizer.py  workflow.py
tests/: _types.py  conftest.py  shared_types.py  test_error_handling.py
tests/E2E/: test_deferral.py  test_e2e_workflow.py
tests/artifact/: test_create_artifact.py
tests/broker/: __init__.py  test_memory.py
tests/cache/: conftest.py  shared.py  test_cache.py  test_cache_basic.py  test_cache_concurrent.py  test_cache_eviction_manual.py  test_cache_policy.py  test_simple_cache.py
tests/coord/: test_context.py
tests/logger/: test_formatters.py  test_process_queue.py  test_queue.py  test_simple.py
tests/repo/: test_contract.py  test_fs.py  test_json.py  test_s3.py  test_sqlite.py
tests/stage/: test_decorators.py  test_policy.py  test_stage.py
tests/stage/decorators/: test_check_repo.py  test_inject_cache.py  test_inject_repo.py  test_side_effect.py
tests/task_queue/: __init__.py  shared.py  test_base_queue.py  test_contract.py  test_process.py  test_thread.py
tests/throttle/: test_resource_manager.py
tests/workflow/: test_router.py  test_workflow.py
