[project]
name = "tadween-core"
version = "0.0.1"
description = "The core of the Tadween ecosystem. A modular, composable framework for building complex, stateful processing pipelines from simple linear chains to full DAG-based workflows"
authors = [{ name = "Abdulrahman Hedya", email = "abdohedya19@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["pydantic~=2.0", "requests>=2.32.5"]

[tool.uv]
[project.optional-dependencies]
s3 = ["boto3>=1.42.26"]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "ipykernel~=6.30.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.1",
    "polars>=1.37.1",
    "pyarrow>=23.0.1",
    "pytest~=9.0.2",
    "pytest-env~=1.2.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "UP",     # pyupgrade 
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG001", # unused arguments in functions
    "F401",   # unused imports
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
