[project]
name = "tadween-core"
version = "0.1.0a1"
description = "`Tadween-core` is a modular, embedded micro-orchestrator designed for building complex, stateful processing pipelines from simple linear chains to full DAG-based workflows with zero external services required."
authors = [{ name = "Abdulrahman Hedya", email = "abdohedya19@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
]
dependencies = ["msgpack>=1.1.2", "pydantic~=2.0", "requests"]

[project.urls]
Homepage = "https://github.com/AHedya/tadween-core"
Repository = "https://github.com/AHedya/tadween-core"
Documentation = "https://github.com/AHedya/tadween-core#readme"
Issues = "https://github.com/AHedya/tadween-core/issues"

[tool.uv]
[project.optional-dependencies]
s3 = ["boto3>=1.42.26"]

[dependency-groups]
dev = [
    "boto3>=1.42.56",
    "graphviz>=0.21",
    "ipykernel~=6.30.1",
    "matplotlib>=3.10.8",
    "moto>=5.1.22",
    "numpy>=2.4.1",
    "pandas>=3.0.1",
    "polars>=1.37.1",
    "pyarrow>=23.0.1",
    "pytest~=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-env~=1.2.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "UP",     # pyupgrade 
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG001", # unused arguments in functions
    "F401",   # unused imports
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
[tool.coverage.run]
source = ["tadween_core"]
omit = ["src/tadween_core/devtools/*"]
[tool.pytest_env]
TESTING = "1"
